--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<li class="menu__item"><a href="#">About</a></li>
 								<li class="menu__item"><a href="#">Servicing</a></li>
 								<li class="menu__item"><a href="#">Portfolio</a></li>
-								<li class="menu__item"><a href="#">Blog</a></li>
+								<li class="menu__item"><a href="../landingPage/index.html">BEM</a></li>
 								<li class="menu__item"><a href="#">Contact</a></li>
 								<li class="menu__item"><i class="fa fa-search" aria-hidden="true"></i></li>
 							</ul>
