--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<ul class="menu d-flex justify-content-end">
 								<li class="menu__item"><a href="#">Home</a></li>
 								<li class="menu__item"><a href="#">About</a></li>
-								<li class="menu__item"><a href="#">Servicing</a></li>
+								<li class="menu__item"><a href="https://zvoffka777.github.io/LessonReact//LessonReact/my-app/public/">Servicing</a></li>
 								<li class="menu__item"><a href="https://zvoffka777.github.io/LessonReact/">Portfolio</a></li>
 								<li class="menu__item"><a href="../landingPage/index.html">BEM</a></li>
 								<li class="menu__item"><a href="#">Contact</a></li>
@@ -45,7 +45,7 @@
 				<div class="row justify-content-center">
 					<div class="col-xl-8">
 						<h2 class="about__title">About Us</h2>
-						<p class="about__text">Каждый человек программист собственного счастья и хакер чужого.</p>
+						<p class="about__text"><b>Пока все что успеваю после смены на фабрике.</b></p>
 					</div>
 				</div>
 				<div class="row justify-content-around">
