--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="row justify-content-center">
 					<div class="col-xl-8">
 						<h2 class="about__title">About Us</h2>
-						<p class="about__text"><b>Пока все что успеваю после смены на фабрике.</b></p>
+						<p class="about__text"><b>Сам не делал, только повторял урок. <br> Это все что успеваю после смены на фабрике.</b></p>
 					</div>
 				</div>
 				<div class="row justify-content-around">
